--- a/09-js-cal-number.html
+++ b/09-js-cal-number.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>09-js-cal-number.html</title>
     <script>
-        function add_number(n1 , n2) {
+        function sum_number(n1 , n2) {
             document.getElementById("output").innerHTML = parseInt(n1) + parseInt(n2)
         }
-        function sub_number(n1 , n2) {
+        function min_number(n1 , n2) {
             document.getElementById("output").innerHTML = parseInt(n1) - parseInt(n2)
         }
         function mul_number(n1 , n2) {
@@ -27,8 +27,8 @@
     Num2 : <input type="text" name="" id="num2">
     <br>
     <br>
-    <button onclick="add_number(document.getElementById('num1').value , document.getElementById('num2').value)"> + </button>
-    <button onclick="sub_number(document.getElementById('num1').value , document.getElementById('num2').value)"> - </button>
+    <button onclick="sum_number(document.getElementById('num1').value , document.getElementById('num2').value)"> + </button>
+    <button onclick="min_number(document.getElementById('num1').value , document.getElementById('num2').value)"> - </button>
     <br>
     <br>
     <button onclick="mul_number(document.getElementById('num1').value , document.getElementById('num2').value)"> * </button>
