--- a/14-js-for.html
+++ b/14-js-for.html
@@ -23,8 +23,8 @@
             for (let i = 0; i < 5; i++) {
                 document.write("<tr>")
                 document.write("<td>" + (i + 1) + "</td>")
-                document.write("<td>XXXX</td>")
-                document.write("<td>XXXXXXXX</td>")
+                document.write("<td>ธนภัทร</td>")
+                document.write("<td>ยืนมั่น</td>")
                 document.write("</tr>")
             }
         </script>
