--- a/15-js-while.html
+++ b/15-js-while.html
@@ -15,21 +15,23 @@
         </tr>
         <script>
             let r = 1
-            while (r <= 5)
-            document.write("<tr>")
-            document.write("<td>" + r + "</td>")
-            document.write("<td>" + "XXXX" + "</td>")
-            document.write("<td>" + "XXXXXXXX" + "</td>")
-            document.write("</tr>")
+            while (r <= 5) {
+                document.write("<tr>")
+                document.write("<td>" + r + "</td>")
+                document.write("<td>" + "ธนภัทร" + "</td>")
+                document.write("<td>" + "ยืนมั่น" + "</td>")
+                document.write("</tr>")
+                r++
+            }
         </script>
     </table>
 
-    <script>
+    <!-- <script>
         let i = 0
         while (i < 10) {
             document.write("Oh! Zus" + "<br>")
             i++
         }
-    </script>
+    </script> -->
 </body>
 </html>
